force-app/main/default/objects/Applicant_Tracking__c/Applicant_Tracking__c.object-meta.xml
<CustomObject>
    <label>Applicant Tracking</label>
    <nameField>
        <label>Applicant Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>