force-app/main/default/objects/Applicant_Tracking__c/fields/Applicant_email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_email__c</fullName>
    <label>Applicant email</label>
    <type>Email</type>
</CustomField>