force-app/main/default/objects/Applicant_Tracking__c/fields/Applicant_phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_phone__c</fullName>
    <label>Applicant phone</label>
    <type>Phone</type>
</CustomField>