force-app/main/default/objects/Applicant_Tracking__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resume under review</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Resume approved</fullName>
            </value>
            <value>
                <fullName>Phone Screen Pending</fullName>
            </value>
            <value>
                <fullName>Phone Screen complete</fullName>
            </value>
            <value>
                <fullName>1st interview scheduled</fullName>
            </value>
            <value>
                <fullName>1st Interview complete</fullName>
            </value>
            <value>
                <fullName>2nd Interview scheduled</fullName>
            </value>
            <value>
                <fullName>2nd Interview complete</fullName>
            </value>
            <value>
                <fullName>Background Complete</fullName>
            </value>
            <value>
                <fullName>References in process</fullName>
            </value>
            <value>
                <fullName>References complete</fullName>
            </value>
            <value>
                <fullName>Job Offered</fullName>
            </value>
            <value>
                <fullName>Notified of selection – not hired</fullName>
            </value>
            <value>
                <fullName>Job Accepted/ hired</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
                <isActive>false</isActive>
                <label>Hired</label>
            </value>
            <value>
                <fullName>Interviewing process</fullName>
                <isActive>false</isActive>
                <label>Interviewing process</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Under review</fullName>
                <isActive>false</isActive>
                <label>Under review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>