force-app/main/default/objects/Applicant_Tracking__c/fields/Candidate_source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_source__c</fullName>
    <label>Candidate source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connenting Colorado</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>LinkenIn</fullName>
            </value>
            <value>
                <fullName>Prosci.com</fullName>
            </value>
            <value>
                <fullName>Internal Candidate</fullName>
            </value>
            <value>
                <fullName>Employee referral</fullName>
            </value>
            <value>
                <fullName>Prosci client</fullName>
            </value>
            <value>
                <fullName>Prosci Career Page</fullName>
            </value>
            <value>
                <fullName>Career Builder</fullName>
            </value>
            <value>
                <fullName>Industry specific site</fullName>
            </value>
            <value>
                <fullName>College job board</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>