force-app/main/default/objects/Applicant_Tracking__c/fields/Candidate_Source_Comment__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source_Comment__c</fullName>
    <inlineHelpText>indicate who the employee referral was from, the industry specific site or the specific  college</inlineHelpText>
    <label>Candidate Source Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>