force-app/main/default/objects/Applicant_Tracking__c/fields/Phone_Screen__c.field-meta.xml
<CustomField>
    <fullName>Phone_Screen__c</fullName>
    <label>Phone Screen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>