force-app/main/default/objects/Applicant_Tracking__c/fields/Position_Applied_for__c.field-meta.xml
<CustomField>
    <fullName>Position_Applied_for__c</fullName>
    <label>Position Applied for</label>
    <referenceTo>Open_Positions__c</referenceTo>
    <relationshipLabel>Applicants Tracking</relationshipLabel>
    <relationshipName>Applicants_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>