force-app/main/default/objects/Applicant_Tracking__c/fields/Potential_fit_for_which_department__c.field-meta.xml
<CustomField>
    <fullName>Potential_fit_for_which_department__c</fullName>
    <label>Potential fit for which department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Account Team</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>GAN</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Program Advisor</fullName>
            </value>
            <value>
                <fullName>Training Logistics</fullName>
            </value>
            <value>
                <fullName>Training Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>