force-app/main/default/objects/Applicant_Tracking__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>TextArea</type>
</CustomField>