force-app/main/default/objects/Applicant_Tracking__c/fields/X1st_Interview__c.field-meta.xml
<CustomField>
    <fullName>X1st_Interview__c</fullName>
    <label>1st Interview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>