force-app/main/default/objects/Applicant_Tracking__c/fields/X2nd_Interview__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Interview__c</fullName>
    <label>2nd Interview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>