force-app/main/default/objects/Applicant_Tracking__c/listViews/Under_Review.listView-meta.xml
<ListView>
    <fullName>Under_Review</fullName>
    <columns>NAME</columns>
    <columns>Rating__c</columns>
    <columns>Position_Applied_for__c</columns>
    <columns>Applicant_phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Phone Screen complete</value>
    </filters>
    <label>Under Review</label>
</ListView>